handle project  new and edit

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,6 +14,7 @@ project.number=Number
 project.project_number=Project Number
 project.name=Name
 project.project_name=Project Name
+project.group=Group
 project.member=Member
 project.status=Status
 project.status.new=New
@@ -29,4 +30,5 @@ button.search_project=Search Project
 button.search_reset=Reset Search
 button.project_create=Create Project
 button.cancel=Cancel
-
+error.projectexists=The projet number already existed. Please select a different project number.
+error.validate=Please enter all the mandatory fields (*)
