--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -14,6 +14,7 @@ numéro de projet = nombre
 project.project_number = Numéro du projet
 project.name = Nom
 project.project_name = Nom du projet
+project.group=Groupe
 project.member = Membre
 project.status = Status
 project.status.new = Nouveau
@@ -29,3 +30,5 @@ button.search_project = Rechercher un projet
 button.search_reset = Réinitialiser la recherche
 button.project_create = Créer un projet
 button.cancel = Annuler
+error.project existe = Le numéro de projet existe déjà. Veuillez sélectionner un numéro de projet différent.
+error.validate = Veuillez saisir tous les champs obligatoires (*)
