--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -14,6 +14,7 @@ project.number = S\u1ED1
 project.project_number = S\u1ED1 d\u1EF1 án
 project.name = Tên
 project.project_name = Tên d\u1EF1 án
+project.group=Nhóm
 project.member = Thành viên
 project.status = Tr\u1EA1ng thái
 project.status.new = M\u1EDBi
@@ -29,3 +30,5 @@ button.search_project = Tìm ki\u1EBFm d\u1EF1 án
 button.search_reset = \u0110\u1EB7t l\u1EA1i tìm ki\u1EBFm
 button.project_create = T\u1EA1o d\u1EF1 án
 button.cancel = H\u1EE7y
+error.project exists = S\u1ED1 d\u1EF1 án \u0111ã t\u1ED3n t\u1EA1i. Vui lòng ch\u1ECDn m\u1ED9t s\u1ED1 d\u1EF1 án khác.
+error.validate = Vui lòng nh\u1EADp t\u1EA5t c\u1EA3 các tr\u01B0\u1EDDng b\u1EAFt bu\u1ED9c (*)
