project new and edit screen and error page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,3 +32,8 @@ button.project_create=Create Project
 button.cancel=Cancel
 error.projectexists=The projet number already existed. Please select a different project number.
 error.validate=Please enter all the mandatory fields (*)
+error.pagetext1=Unexpected error occurred.
+error.pagetext2=Please
+error.pagetext3=contact your administrator
+error.pagetext4=or
+error.pagetext5=back to search project
