--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -32,3 +32,8 @@ button.project_create = T\u1EA1o d\u1EF1 án
 button.cancel = H\u1EE7y
 error.project exists = S\u1ED1 d\u1EF1 án \u0111ã t\u1ED3n t\u1EA1i. Vui lòng ch\u1ECDn m\u1ED9t s\u1ED1 d\u1EF1 án khác.
 error.validate = Vui lòng nh\u1EADp t\u1EA5t c\u1EA3 các tr\u01B0\u1EDDng b\u1EAFt bu\u1ED9c (*)
+error.pagetext1 = \u0110ã x\u1EA3y ra l\u1ED7i không mong mu\u1ED1n.
+error.pagetext2 = Vui lòng
+error.pagetext3 = liên h\u1EC7 v\u1EDBi qu\u1EA3n tr\u1ECB viên c\u1EE7a b\u1EA1n
+error.pagetext4 = ho\u1EB7c
+error.pagetext5 = quay l\u1EA1i d\u1EF1 án tìm ki\u1EBFm
