--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -32,3 +32,8 @@ button.project_create = Créer un projet
 button.cancel = Annuler
 error.project existe = Le numéro de projet existe déjà. Veuillez sélectionner un numéro de projet différent.
 error.validate = Veuillez saisir tous les champs obligatoires (*)
+error.pagetext1 = Une erreur inattendue s'est produite.
+error.pagetext2 = S'il vous plait
+error.pagetext3 = contactez votre administrateur
+error.pagetext4 = ou
+error.pagetext5 = retour au projet de recherche
