finish front end

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,3 +37,5 @@ error.pagetext2=Please
 error.pagetext3=contact your administrator
 error.pagetext4=or
 error.pagetext5=back to search project
+notify.item.selected=items selected
+notify.item.delete=delete selected items
