--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -10,7 +10,7 @@ label.title.project_new = Nouveau projet
 label.title.project_edit = Editer le projet
 label.title.project_list = Liste de projets
 label.title.project_status = Statut du projet
-numéro de projet = nombre
+project.number=Nombre
 project.project_number = Numéro du projet
 project.name = Nom
 project.project_name = Nom du projet
@@ -37,3 +37,5 @@ error.pagetext2 = S'il vous plait
 error.pagetext3 = contactez votre administrateur
 error.pagetext4 = ou
 error.pagetext5 = retour au projet de recherche
+notify.item.selected=éléments sélectionnés
+notify.item.delete=supprimer les éléments sélectionnés
