--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -37,3 +37,5 @@ error.pagetext2 = Vui lòng
 error.pagetext3 = liên h\u1EC7 v\u1EDBi qu\u1EA3n tr\u1ECB viên c\u1EE7a b\u1EA1n
 error.pagetext4 = ho\u1EB7c
 error.pagetext5 = quay l\u1EA1i d\u1EF1 án tìm ki\u1EBFm
+notify.item.selected=m\u1EE5c \u0111\u01B0\u1EE3c ch\u1ECDn
+notify.item.delete=xóa các m\u1EE5c \u0111ã ch\u1ECDn
