--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,5 @@
 label.project_name = Gestion des informations sur le projet
-label.logout = DÈconnexion
+label.logout = D√©connexion
 laebl.help = Aide
 label.menu.new = Nouveau
 label.menu.project = Projet
@@ -7,35 +7,36 @@ label.menu.customer = Client
 label.menu.supplier = Fournisseur
 label.menu.project_list = Liste de projets
 label.title.project_new = Nouveau projet
-label.title.project_edit = Editer le projet
+label.title.project_edit = √âditer les informations du projet
 label.title.project_list = Liste de projets
 label.title.project_status = Statut du projet
-project.number=Nombre
-project.project_number = NumÈro du projet
+num√©ro de projet = nombre
+project.project_number = Num√©ro du projet
 project.name = Nom
 project.project_name = Nom du projet
-project.group=Groupe
+project.group = Groupe
 project.member = Membre
 project.status = Status
 project.status.new = Nouveau
-project.status.planned = PrÈvu
+project.status.planned = Pr√©vu
 project.status.in_progress = En cours
-project.status.finished = TerminÈ
+project.status.finished = Termin√©
 project.customer = client
-project.start_date = Date de dÈbut
+project.start_date = Date de d√©but
 project.end_date = Date de fin
 project.delete = Detele
-text.placeholder_search = NumÈro du projet, nom, nom du client
+text.placeholder_search = Num√©ro du projet, nom, nom du client
 button.search_project = Rechercher un projet
-button.search_reset = RÈinitialiser la recherche
-button.project_create = CrÈer un projet
+button.search_reset = R√©initialiser la recherche
+button.project_create = Cr√©er un projet
 button.cancel = Annuler
-error.project existe = Le numÈro de projet existe dÈj‡. Veuillez sÈlectionner un numÈro de projet diffÈrent.
+error.projectexists = Le num√©ro de projet existait d√©j√†. Veuillez s√©lectionner un num√©ro de projet diff√©rent.
 error.validate = Veuillez saisir tous les champs obligatoires (*)
+error.membernotxists = Les visas suivants n'existent pas
 error.pagetext1 = Une erreur inattendue s'est produite.
 error.pagetext2 = S'il vous plait
 error.pagetext3 = contactez votre administrateur
 error.pagetext4 = ou
 error.pagetext5 = retour au projet de recherche
-notify.item.selected=ÈlÈments sÈlectionnÈs
-notify.item.delete=supprimer les ÈlÈments sÈlectionnÈs
+notify.item.selected = √©l√©ments s√©lectionn√©s
+notify.item.delete = supprimer les √©l√©ments s√©lectionn√©s
