--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -1,41 +1,42 @@
-label.project_name = Qu\u1EA3n lý thông tin d\u1EF1 án
+label.project_name = Qu\u1EA3n lÃ½ thÃ´ng tin d\u1EF1 Ã¡n
 label.logout = \u0110\u0103ng xu\u1EA5t
-laebl.help = Tr\u1EE3 giúp
+laebl.help = Tr\u1EE3 giÃºp
 label.menu.new = M\u1EDBi
-label.menu.project = D\u1EF1 án
-label.menu.customer = Khách hàng
-label.menu.supplier = Nhà cung c\u1EA5p
-label.menu.project_list = Danh sách d\u1EF1 án
-label.title.project_new = D\u1EF1 án m\u1EDBi
-label.title.project_edit = Ch\u1EC9nh s\u1EEDa d\u1EF1 án
-label.title.project_list = Danh sách d\u1EF1 án
-label.title.project_status = Tr\u1EA1ng thái d\u1EF1 án
+label.menu.project = D\u1EF1 Ã¡n
+label.menu.customer = KhÃ¡ch hÃ ng
+label.menu.supplier = NhÃ  cung c\u1EA5p
+label.menu.project_list = Danh sÃ¡ch d\u1EF1 Ã¡n
+label.title.project_new = D\u1EF1 Ã¡n m\u1EDBi
+label.title.project_edit = Ch\u1EC9nh s\u1EEDa d\u1EF1 Ã¡n
+label.title.project_list = Danh sÃ¡ch d\u1EF1 Ã¡n
+label.title.project_status = Tr\u1EA1ng thÃ¡i d\u1EF1 Ã¡n
 project.number = S\u1ED1
-project.project_number = S\u1ED1 d\u1EF1 án
-project.name = Tên
-project.project_name = Tên d\u1EF1 án
-project.group=Nhóm
-project.member = Thành viên
-project.status = Tr\u1EA1ng thái
+project.project_number = S\u1ED1 d\u1EF1 Ã¡n
+project.name = TÃªn
+project.project_name = TÃªn d\u1EF1 Ã¡n
+project.group=NhÃ³m
+project.member = ThÃ nh viÃªn
+project.status = Tr\u1EA1ng thÃ¡i
 project.status.new = M\u1EDBi
-project.status.planned = \u0110ã lên k\u1EBF ho\u1EA1ch
-project.status.in_progress = \u0110ang x\u1EED lý
-project.status.finished = Hoàn thành
-project.customer = Khách hàng
-project.start_date = Ngày b\u1EAFt \u0111\u1EA7u
-project.end_date = Ngày k\u1EBFt thúc
+project.status.planned = \u0110Ã£ lÃªn k\u1EBF ho\u1EA1ch
+project.status.in_progress = \u0110ang x\u1EED lÃ½
+project.status.finished = HoÃ n thÃ nh
+project.customer = KhÃ¡ch hÃ ng
+project.start_date = NgÃ y b\u1EAFt \u0111\u1EA7u
+project.end_date = NgÃ y k\u1EBFt thÃºc
 project.delete = Detele
-text.placeholder_search = S\u1ED1 d\u1EF1 án, tên, tên khách hàng
-button.search_project = Tìm ki\u1EBFm d\u1EF1 án
-button.search_reset = \u0110\u1EB7t l\u1EA1i tìm ki\u1EBFm
-button.project_create = T\u1EA1o d\u1EF1 án
+text.placeholder_search = S\u1ED1 d\u1EF1 Ã¡n, tÃªn, tÃªn khÃ¡ch hÃ ng
+button.search_project = TÃ¬m ki\u1EBFm d\u1EF1 Ã¡n
+button.search_reset = \u0110\u1EB7t l\u1EA1i tÃ¬m ki\u1EBFm
+button.project_create = T\u1EA1o d\u1EF1 Ã¡n
 button.cancel = H\u1EE7y
-error.project exists = S\u1ED1 d\u1EF1 án \u0111ã t\u1ED3n t\u1EA1i. Vui lòng ch\u1ECDn m\u1ED9t s\u1ED1 d\u1EF1 án khác.
-error.validate = Vui lòng nh\u1EADp t\u1EA5t c\u1EA3 các tr\u01B0\u1EDDng b\u1EAFt bu\u1ED9c (*)
-error.pagetext1 = \u0110ã x\u1EA3y ra l\u1ED7i không mong mu\u1ED1n.
-error.pagetext2 = Vui lòng
-error.pagetext3 = liên h\u1EC7 v\u1EDBi qu\u1EA3n tr\u1ECB viên c\u1EE7a b\u1EA1n
+error.project exists = S\u1ED1 d\u1EF1 Ã¡n \u0111Ã£ t\u1ED3n t\u1EA1i. Vui lÃ²ng ch\u1ECDn m\u1ED9t s\u1ED1 d\u1EF1 Ã¡n khÃ¡c.
+error.validate = Vui lÃ²ng nh\u1EADp t\u1EA5t c\u1EA3 cÃ¡c tr\u01B0\u1EDDng b\u1EAFt bu\u1ED9c (*)
+error.membernotxists = Các visa sau không t\u1ED3n t\u1EA1i
+error.pagetext1 = \u0110Ã£ x\u1EA3y ra l\u1ED7i khÃ´ng mong mu\u1ED1n.
+error.pagetext2 = Vui lÃ²ng
+error.pagetext3 = liÃªn h\u1EC7 v\u1EDBi qu\u1EA3n tr\u1ECB viÃªn c\u1EE7a b\u1EA1n
 error.pagetext4 = ho\u1EB7c
-error.pagetext5 = quay l\u1EA1i d\u1EF1 án tìm ki\u1EBFm
+error.pagetext5 = quay l\u1EA1i d\u1EF1 Ã¡n tÃ¬m ki\u1EBFm
 notify.item.selected=m\u1EE5c \u0111\u01B0\u1EE3c ch\u1ECDn
-notify.item.delete=xóa các m\u1EE5c \u0111ã ch\u1ECDn
+notify.item.delete=xÃ³a cÃ¡c m\u1EE5c \u0111Ã£ ch\u1ECDn
