--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,7 @@ label.menu.customer=Customer
 label.menu.supplier=Supplier
 label.menu.project_list=Project list
 label.title.project_new=New Project
-label.title.project_edit=Edit Project
+label.title.project_edit=Edit Project Informartion
 label.title.project_list=Project List
 label.title.project_status=Project Status
 project.number=Number
@@ -32,6 +32,7 @@ button.project_create=Create Project
 button.cancel=Cancel
 error.projectexists=The projet number already existed. Please select a different project number.
 error.validate=Please enter all the mandatory fields (*)
+error.membernotxists=The following visas do not exist
 error.pagetext1=Unexpected error occurred.
 error.pagetext2=Please
 error.pagetext3=contact your administrator
