--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -29,6 +29,7 @@ text.placeholder_search = Numéro du projet, nom, nom du client
 button.search_project = Rechercher un projet
 button.search_reset = Réinitialiser la recherche
 button.project_create = Créer un projet
+button.project_update = Mettre à jour le projet
 button.cancel = Annuler
 error.projectexists = Le numéro de projet existait déjà. Veuillez sélectionner un numéro de projet différent.
 error.validate = Veuillez saisir tous les champs obligatoires (*)
