--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,6 +29,7 @@ text.placeholder_search=Project number, name, customer name
 button.search_project=Search Project
 button.search_reset=Reset Search
 button.project_create=Create Project
+button.project_update=Update Project
 button.cancel=Cancel
 error.projectexists=The projet number already existed. Please select a different project number.
 error.validate=Please enter all the mandatory fields (*)
