--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,5 +39,8 @@ error.pagetext2=Please
 error.pagetext3=contact your administrator
 error.pagetext4=or
 error.pagetext5=back to search project
+error.update_concurrent=Can not update project because has someone updated this project before.
+error.delete_notnew=Can not delete project because this project is not new status.
+error.delete_concurrent=Can not delete project because project is not existed or someone else already deleted it.
 notify.item.selected=items selected
 notify.item.delete=delete selected items
