--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -39,5 +39,8 @@ error.pagetext2 = S'il vous plait
 error.pagetext3 = contactez votre administrateur
 error.pagetext4 = ou
 error.pagetext5 = retour au projet de recherche
+error.update_concurrent = Impossible de mettre à jour le projet car quelqu'un a déjà mis à jour ce projet auparavant.
+error.delete_notnew = Impossible de supprimer le projet car ce projet n'a pas un nouveau statut.
+error.delete_concurrent = Impossible de supprimer le projet car celui-ci n'existe pas ou quelqu'un d'autre l'a déjà supprimé.
 notify.item.selected = éléments sélectionnés
 notify.item.delete = supprimer les éléments sélectionnés
