--- a/src/main/resources/messages_vi.properties
+++ b/src/main/resources/messages_vi.properties
@@ -39,5 +39,8 @@ error.pagetext2 = Vui lÃ²ng
 error.pagetext3 = liÃªn h\u1EC7 v\u1EDBi qu\u1EA3n tr\u1ECB viÃªn c\u1EE7a b\u1EA1n
 error.pagetext4 = ho\u1EB7c
 error.pagetext5 = quay l\u1EA1i d\u1EF1 Ã¡n tÃ¬m ki\u1EBFm
+error.update_concurrent = Không th\u1EC3 c\u1EADp nh\u1EADt d\u1EF1 án vì \u0111ã có ai \u0111ó c\u1EADp nh\u1EADt d\u1EF1 án này tr\u01B0\u1EDBc \u0111ó.
+error.delete_notnew = Không th\u1EC3 xóa d\u1EF1 án vì d\u1EF1 án này không ph\u1EA3i là tr\u1EA1ng thái m\u1EDBi.
+error.delete_conc hi\u1EC7n = Không th\u1EC3 xóa d\u1EF1 án vì d\u1EF1 án không t\u1ED3n t\u1EA1i ho\u1EB7c ng\u01B0\u1EDDi khác \u0111ã xóa nó.
 notify.item.selected=m\u1EE5c \u0111\u01B0\u1EE3c ch\u1ECDn
 notify.item.delete=xÃ³a cÃ¡c m\u1EE5c \u0111Ã£ ch\u1ECDn
